Deployment1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy1
  template:
    metadata:
      labels:
        app: deploy1
    spec:
      containers:
      - name: deploy1
        image: paulbouwer/hello-kubernetes:1.8
---
apiVersion: v1
kind: Service
metadata:
  name: deploy1
  labels:
    run: deploy1
spec:
  selector:
    name: deploy1
  ports:
    -  name: http
       port: 443
       targetPort: 443
       protocol: TCP
