Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deploy_openxcell
spec:
  rules:
  - host: test.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deploy1
            port:
              number: 443
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deploy2
            port:
              number: 443
	  - path: /
        pathType: Prefix
        backend:
          service:
            name: deploy3
            port:
              number: 443
			  
			  
kubectl patch svc deploy1 -n default -p '{"spec": {"type": "LoadBalancer", "externalIPs":["192.168.99.104"]}}'
